# lol_sift

./: .gitignore  LICENSE  README.md  find_champion.py  math_equations.txt  pyproject.toml
lol_sift/: __init__.py  app.py  features_utils.py  lol_window_utils.py
lol_surf/: create_champion_features.py  create_portrait_features.py  lol_window_utils.py  sandbox.py
tests/: test_features.py  test_get_window.py
