[tool.poetry]
name = "lol_surf"
version = "0.1.0"
description = ""
authors = ["mrtolkien <gary.mialaret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.1"
PyAutoGUI = "^0.9.52"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
